# fbDOOM

./: .gitignore  CMakeLists.txt  README.TXT
fbdoom/: config.h  d_main.c  i_video_fbdev.c  p_saveg.c
src/: d_iwad.c  doomtype.h  i_input_tty.c  i_main.c  i_system.c  i_system.h  i_timer.c  i_video_fbdev.c  m_config.c  m_menu.c  m_misc.c  w_file.c  w_file_posix.c  w_wad.c
